<resources>
    <string name="app_name">PlanBUperso</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="accueil_titre">Bibliothèque Universitaire de P10</string>
    <string name="imgserv">img service </string>


   <string name="horaires_acces_desc">
        Bibliothèque Universitaire de Paris Ouest Nanterre La Défense
        2 allée de l\'Université
        92 001 Nanterre Cedex</string>


    <string-array name="nomDisciplines">
        <item>Droit</item>
        <item>Sciences Humaines</item>
        <item>Economie</item>
    </string-array>
    <!--  rechercher -->
    <string name="search_hint">recherche</string>
    <string name="app_label">recherche1</string>
    <string name="titre_s">titre</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="title_activity_main2">Main2Activity</string>


    <!-- PAGE SELECT DISCIPLINE DROIT -->
    <string name="disciplinesDroit_titre">Salle Droit et ScPo </string>
    <string name="disciplinesDroit_description"> Au rez-de-chaussée : ► Salle de Droit et Science p
        olitique : administration publique, droit public, droit privé, science politique
</string>

    <!-- PAGE SELECT DISCIPLINE SCIENCES ECONOMIQUES -->
    <string name="disciplinesEco_titre">Salle Sciences Economiques</string>
    <string name="disciplinesEco_description"> Au rez-de-chaussée : ►économie, mathématiques, infor
        matique, généralités (préparation concours, orientation professionnelle)
La Vidéothèque,  les ouvrages de cinéma et les périodiques se trouvent également dans cette salle
</string>


    <!-- PAGE SELECT DISCIPLINE LANGUE ET LITTERATURE -->
    <string name="disciplinesLit_titre">Salle Langues et Littérature</string>
    <string name="disciplinesLit_description"> Au Premier étage: ►langues, lettres classiques,
        littérature française, littérature générale, linguistique
</string>

    <!-- PAGE SELECT DISCIPLINE SCIENCES HUMAINES -->
    <string name="disciplinesSH_titre">Salle Sciences Humaines</string>
    <string name="disciplinesSH_description"> Au 1er étage : ► archéologie, arts du spectacle, géographie, histoire, histoire de l art, philosophie, religion
</string>

    <!-- PAGE SELECT DISCIPLINE  SCIENCES SOCIALES  -->
    <string name="disciplinesSS_titre"> Salle Sciences Sociales</string>
    <string name="disciplinesSS_description"> Au 1er étage : ►anthropologie, ethnologie, psychologie, éducation, sciences et médecine, sociologie, STAPS
</string>

    <!--PAGE HORAIRES ET ACCES-->
    <string name="horaires_titre">Horaires</string>
    <string name="jours_semaine">Lundi au Vendredi : 8h30 – 20h</string>
    <string name="jours_weekend">Samedi : 10h - 18h</string>
    <string name="horaires_img">img</string>
    <string name="horaires_titre_acces">Accès</string>

    <!--PAGE INFO RESSOURCES-->
    <string name="infores_titre">Informations Ressources</string>

    <string name="infores_titre2">Des livres</string>
    <string name="infores_desc2">en salle de lecture. </string>

    <string name="infores_titre3">Des périodiques</string>
    <string name="infores_desc3">a consulter:  sur place   en ligne </string>

    <string name="infores_titre4">Des theses</string>
    <string name="infores_desc4">consultables au format:  electronique   imprim   microfiche</string>

    <string name="infores_titre5">La vidéothèque</string>
    <string name="infores_desc5">  à consulter ou à emprunter: DVD  VHS de films de fiction ou de documentaires</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="planbu">planbu</string>
    <string name="imgdroit">imgdroit</string>
    <string name="imgscpo">imgscpo</string>
    <string name="imgplandroit">imgplandroit</string>
    <string name="switchdiscipline">Switch Discipline</string>
    <string name="csv_title_liste">Lecture fichier csv</string>
    <string name="plan_sans_serv">plan sans serv</string>
    <string name="switch_on_services">Services</string>
    <string name="droit_button_myFrag">Salle suivante</string>
    <string name="docmini">docmini</string>
    <string name="grpmini">groupe mini</string>
    <string name="handmini">hand mini</string>
    <string name="contact">Contact</string>
    <string name="adresse_bu"> Voir Horaires et Accès 01 40 97 72 02</string>
    <string name="disc_bulle_titre">La Bulle</string>
    <string name="disc_bulle_tit">La BUlle</string>


    <!--PAGE CONTACT-->

</resources>
